Offline accounts were not showing grayed in non-default theme, fixed.
darcs-hash:20060805055639-8cc29-293753605a05a232b0eaf83d6369aa32e405af8b.gz

--- a/chrome/skin/classic/accounts.css
+++ b/chrome/skin/classic/accounts.css
@@ -4,5 +4,5 @@ is questionable */
 
 menuitem.xmpp-offline
 {
-  color: gray;
+  color: graytext ! important;
   }
